
Design Patterns
Material for ALT.NET Hispano VAN (Work in progress)

2010-10-11
Initial project in repo