@@ -1,0 +1,24 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace Patterns.Interpreter
+{
+    public class ConstantExpression : IExpression
+    {
+        private object value;
+
+        public ConstantExpression(object value)
+        {
+            this.value = value;
+        }
+
+        public object Value { get { return this.value; } }
+
+        public object Evaluate(Context context)
+        {
+            return this.value;
+        }
+    }
+}
